--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
     "files.associations": {
         "cstdint": "cpp"
-    }
+    },
+    "cSpell.words": [
+        "EPNUM",
+        "Thach"
+    ]
 } // {
 //     // These settings tweaks to the cmake plugin will ensure
 //     // that you debug using cortex-debug instead of trying to launch
