--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ pico_enable_stdio_uart(${PROJECT_NAME} 1)# Disable stdio to UART
 pico_add_extra_outputs(${PROJECT_NAME})# Create map/bin/hex/uf2 file etc.
 target_link_libraries(${PROJECT_NAME}     
     pico_stdlib
+    hardware_i2c
     tinyusb_device    
     pum
 )
