--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,29 +1,21 @@
 {
-    "files.associations": {
-        "cstdint": "cpp"
+    // These settings tweaks to the cmake plugin will ensure
+    // that you debug using cortex-debug instead of trying to launch
+    // a Pico binary on the host
+    "cmake.statusbar.advanced": {
+        "debug": {
+            "visibility": "hidden"
+        },
+        "launch": {
+            "visibility": "hidden"
+        },
+        "build": {
+            "visibility": "hidden"
+        },
+        "buildTarget": {
+            "visibility": "hidden"
+        }
     },
-    "cSpell.words": [
-        "EPNUM",
-        "Thach"
-    ]
-} // {
-//     // These settings tweaks to the cmake plugin will ensure
-//     // that you debug using cortex-debug instead of trying to launch
-//     // a Pico binary on the host
-//     "cmake.statusbar.advanced": {
-//         "debug": {
-//             "visibility": "hidden"
-//         },
-//         "launch": {
-//             "visibility": "hidden"
-//         },
-//         "build": {
-//             "visibility": "hidden"
-//         },
-//         "buildTarget": {
-//             "visibility": "hidden"
-//         }
-//     },
-//     "cmake.buildBeforeRun": true,
-//     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
-// }
+    "cmake.buildBeforeRun": true,
+    "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
+}
