--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
             "cwd": "${workspaceRoot}",
             "executable": "${command:cmake.launchTargetPath}",
             "name": "RP2040 Debug",
-            "request": "launch",
+            "request": "attach",
+            // "request": "launch",
             "type": "cortex-debug",
             "servertype": "jlink",
             // "serverpath": "/Applications/SEGGER/JLink/JLinkGDBServerCLExe",
@@ -18,6 +19,17 @@
             "serialNumber": "", // add J-Link serial number if having multiple attached the same time.
             "runToMain": true,
             "svdFile": "${env:PICO_SDK_PATH}/src/rp2040/hardware_regs/rp2040.svd",
+            "rttConfig": {
+                "enabled": true,
+                "address": "auto",
+                "decoders": [
+                    {
+                        "label": "",
+                        "port": 0,
+                        "type": "console"
+                    }
+                ]
+            },
         }
     ]
 }
