--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ pico_add_extra_outputs(${PROJECT_NAME})# Create map/bin/hex/uf2 file etc.
 target_link_libraries(${PROJECT_NAME}     
     pico_stdlib
     hardware_i2c
+    hardware_pwm
     tinyusb_device    
     pum
 )
